# output_practice

./: .dockerignore   .gitignore  Dockerfile  README.md  create_tables.py  docker-compose.yml  main.py  makefile  package-lock.json  pyproject.toml
.aws/: credentials
app/: main.py
app/api/: auth.py
app/api/book/: book.py  borrow_endpoints.py
app/api/user/: user.py
app/api/v1/: book.py
app/core/: auth.py  database.py
app/domain/: book.py  book_service.py  user.py  user_service.py
app/infrastructure/: db.py  test_connection.py
app/scripts/: create_tables.py  create_test_user.py  test_crud.py
cfn/: 02_ec2.yml
ts/: package-lock.json  package.json
ts/src/: App.css  App.tsx  index.css
ts/src/components/: AuthGuard.tsx  BookCard.css  BookCard.tsx  BookForm.css  BookForm.tsx  BookList.css  BookList.tsx  BorrowedBookList.css  BorrowedBookList.tsx
ts/src/contexts/: AuthContext.tsx
ts/src/pages/: BorrowedBooks.css  BorrowedBooks.tsx  Home.css  Home.tsx  Login.css  Login.tsx  Register.css  Register.tsx
ts/src/services/: api.ts
ts/src/types/: Book.ts
